# expense-tracker

./: .env.sample  .gitattributes  LICENSE  README.md  pyproject.toml  query.sql  requirements.txt
core/: admin.py  apps.py  settings.py  urls.py
expense/: admin.py  context_processor.py  models.py  routers.py  urls.py  views.py
expense/migrations/: 0001_initial.py  0002_tag_transaction_tags.py  0003_alter_transaction_tags.py
expense/static/assets/pages/: dashboard.js  datatables.init.js
expense/templates/admin/: 404.html  500.html  base.html  base_user.html  login.html  register.html
expense/templates/expense/: base.html  base_user.html  expense.html  form.html  index.html  login.html  page-template.html  register.html  report.html  sidebar.html  topbar.html
expense/templatetags/: tag_color.py
