[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
description = "Personel expense tracker app backed by Django"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.12"
authors = [
    {name = "Ayesha Sameer", email = "goheerayesha@gmail.com"},
    {name = "Muhammad Sameer", email = "sameeramin1997@gmail.com"}
]
keywords = [
    "Expense Tracker",
    "Django",
    "Custom Expense Tracker",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=4.2.10",
    "django-crispy-forms>=2.1",
    "python-dotenv>=1.0.1",
    "psycopg>=3.1.18"
]

[project.urls]
repository = "https://github.com/AyeshaGoheer/expense-tracker"
documentation = "https://github.com/AyeshaGoheer/expense-tracker/blob/main/README.md"

[project.optional-dependencies]
linter = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "pre-commit>=3.6.0",
]

[tool.black]
color=true
exclude = '''
    /(
        \.git
        | \._build
        | \.back.out
        | \.build
        | \.coverage
        | \.dist
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | ./src/coverage
        | blib2to3
        | ./tests
    )/
'''
include = '\.pyi?$'
line-length = 119

[tool.isort]
color_output = true
combine_as_imports = true
ensure_newline_before_comments = true
force_alphabetical_sort_within_sections = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_between_sections = 1
multi_line_output = 3
profile = "black"
skip = [
    ".coverage",
    "coverage/*",
    "cov.*",
    ".dockerignore",
    ".env",
    ".github/*",
    ".gitignore",
    ".html",
    ".md",
    ".python-version",
    ".rst",
    ".xml"
]
skip_gitignore = true
src_paths = [
    "core/",
    "expense/",
]
use_parentheses = true
